objects/BillCode__c.object
<CustomObject>
    <description>&lt;BIC&gt;Bill Codes from JDE for product mapping</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillCodeDescription__c</fullName>
        <label>Bill Code Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BillCode__c</fullName>
        <description>JDE Bill code</description>
        <externalId>true</externalId>
        <inlineHelpText>JDE Bill code</inlineHelpText>
        <label>Bill Code</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TechDMImportDateTime__c</fullName>
        <label>Tech_DMImportDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechDMOriginalSourceSystem__c</fullName>
        <label>Tech_DMOriginalSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMReleaseNo__c</fullName>
        <label>Tech_DMReleaseNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceID__c</fullName>
        <label>Tech_DMSourceID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceSystem__c</fullName>
        <label>Tech_DMSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMXREFId__c</fullName>
        <label>Tech_DMXREFId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Bill Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>BillCode__c</columns>
        <columns>BillCodeDescription__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BC-{000000}</displayFormat>
        <label>Bill Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bill Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>